# llm-templates-fabric

./: README.md  llm_templates_fabric.py  pyproject.toml
tests/: test_templates_fabric.py
