[project]
name = "llm-templates-fabric"
version = "0.1a0"
description = "Load LLM templates from Fabric"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm==0.24a0",
    "httpx"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-templates-fabric"
Changelog = "https://github.com/simonw/llm-templates-fabric/releases"
Issues = "https://github.com/simonw/llm-templates-fabric/issues"
CI = "https://github.com/simonw/llm-templates-fabric/actions"

[project.entry-points.llm]
templates_fabric = "llm_templates_fabric"

[project.optional-dependencies]
test = ["pytest"]
